--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                                 <i class="fa-solid fa-magnifying-glass"></i>
                                     </button>
                         </div>
-                        </header>
+            </header>
 
             <section class="filters">
                         <div class="filters__container">
@@ -46,6 +46,17 @@
                                     </div>
                         </div>
             </section>
+
+            <main class="recipes">
+                        <div class="recipes__container" id="recipes-container">
+                                    
+                        </div>
+            </main>
+
+            <script src="data/recipes.js"></script>
+            <script src="scripts/templates/recipeCard.js"></script>
+            <script src="scripts/pages/index.js"></script>
+            <script src="https://kit.fontawesome.com/6153fe3ef8.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
-<script src="https://kit.fontawesome.com/6153fe3ef8.js" crossorigin="anonymous"></script>
