Modification pour le W3C
Modification du code pour qu'il suive bien les normes du W3C.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-            <link href="css/style.css" rel="stylesheet" type="text/css" />
+            <link href="css/style.css" rel="stylesheet" type="text/css">
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -12,7 +12,7 @@
             <header>
                         <div class="header__logo">
                                     <span>LES PETITS PLATS</span>
-                                    <img src="assets/images/logo/Group 3.png" alt="Logo" class="header__logo-img">
+                                    <img src="assets/images/logo/Group3.png" alt="Logo" class="header__logo-img">
                         </div>
                         <h1 class="header__title">CHERCHEZ PARMI PLUS DE 1500 RECETTES<br>DU QUOTIDIEN, SIMPLES ET DÉLICIEUSES</h1>
                         <div class="header__search-container">
@@ -95,11 +95,9 @@
                         </div>
             </main>
 
-            <script src="scripts/utils/filterManager.js"></script>
-            <script src="data/recipes.js"></script>
-            <script src="scripts/templates/recipeCard.js"></script>
-            <script src="scripts/pages/index.js"></script>
+            <script type="module" src="./scripts/pages/index.js"></script>
             <script src="https://kit.fontawesome.com/6153fe3ef8.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
